--- a/Shoppy/templates/products.html
+++ b/Shoppy/templates/products.html
@@ -5,7 +5,7 @@
 	<ul>
 		{% for product in products %}
 			<li>
-				<p>{{ product.name }} - {{ product.price }} | <em>{{ product.description }}</em></p>
+				<p><a href="{% url 'product_detail' product_id=product.pk %}">{{ product.name }} - {{ product.price }} | <em>{{ product.description }}</em></a></p>
 				<img src="{{ product.image.url }}">
 			</li>
 		{% endfor %}
