--- a/Shoppy/templates/products/product_detail.html
+++ b/Shoppy/templates/products/product_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-	{{ title }}
+	{{ product.name }}
 {% endblock %}
 
 {% block content %}
-	<h1>{{ title }}</h1>
+	<h1>{{ product.name }}</h1>
 	<div>
 		<p>{{ product.name }} - {{ product.price }} | <em>{{ product.description }}</em></p>
 		<img src="{{ product.image.url }}">
