Sistema de usuarios
Se agrega un sistema de usuario básico y después se le agregará más funcionalidad

--- a/Shoppy/templates/products/product_list.html
+++ b/Shoppy/templates/products/product_list.html
@@ -2,6 +2,11 @@
 
 {% block content %}	
 	<h1>Products</h1>
+	{% if user.is_authenticated %}
+		<p><strong>{{ user.username }}</strong> | <a href="{% url 'products:logout' %}">Logout</a></p>
+	{% else %}
+		<p><a href="{% url 'products:auth_login' %}">Login</a></p>
+	{% endif %}
 	<ul>
 		{% for product in object_list %}
 			<li>
